profile page and auth jwt  is fixed

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -28,3 +28,9 @@
 .room-options:hover {
     background-color: black;
 }
+
+@media (max-width:500px) {
+    .formContainer {
+        padding: 25px;
+    }
+}
