--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #F2DEBA !important;
+  /* background-color: #F2DEBA !important; */
   
 }
 
